fixed order styles

--- a/styles/modal.css
+++ b/styles/modal.css
@@ -61,8 +61,8 @@
 .finalOrder-container {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
     font-size: 0.8rem;
+    margin-top: 0.2rem;
 }
 
 .finalPrice {
